services/kubernetes/rune-staging/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "rune-staging-monitoring-hub-external-ip"
    ingress.gcp.kubernetes.io/pre-shared-cert: "rune-staging-monitoring-hub-ssl-certificate"
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  rules:
    - http:
        paths:
          - path: "/grafana"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
---
